--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Wenta Fortnite</title>
+  <title>Wenta Spoofer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <link href="assets/img/icon.jpg" rel="icon">
@@ -56,7 +56,7 @@
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1>Wenta FN</h1>
+        <h1>Wenta Spoofer</h1>
       </a>
       <nav id="navbar" class="navbar">
       </nav>
@@ -70,7 +70,7 @@
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2>Bienvenido a <span>Wenta</span></h2>
-          <p>Wenta es un spoofer de Fortnite totalmente indetectable con el cual podrás jugar Fortnite de vuelta sin que te expulsen</p>
+          <p>Wenta es un hwid spoofer totalmente indetectable con el cual podrás volver a jugar sin que te saquen por hwid ban</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#pricing" class="btn-get-started">Comprar</a>
           </div>
@@ -94,14 +94,14 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-gem"></i></div>
               <h4 class="title"><a class="stretched-link">Precios</a></h4>
-              <p>Podrás jugar Fortnite nuevamente a un precio muy bajo.</p>
+              <p>Podrás jugar nuevamente a un precio muy bajo.</p>
             </div>
           </div>
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-list"></i></div>
               <h4 class="title"><a class="stretched-link">Compatibilidad</a></h4>
-              <p>El spoofer funciona en todas las motherboards.</p>
+              <p>El spoofer funciona en casi todas las motherboards.</p>
             </div>
           </div>
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
