--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Wenta Spoofer</title>
+  <title>Wenta Virtualizer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <link href="assets/img/icon.jpg" rel="icon">
@@ -56,7 +56,7 @@
   <header id="header" class="header d-flex align-items-center">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1>Wenta Spoofer</h1>
+        <h1>Wenta Virtualizer</h1>
       </a>
       <nav id="navbar" class="navbar">
       </nav>
@@ -70,7 +70,7 @@
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
           <h2>Bienvenido a <span>Wenta</span></h2>
-          <p>Wenta es un hwid spoofer totalmente indetectable con el cual podrás volver a jugar sin que te saquen por hwid ban</p>
+          <p>Wenta es un Virtualizer totalmente indetectable con el cual podrás volver a jugar sin que te saquen por hwid ban</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#pricing" class="btn-get-started">Comprar</a>
           </div>
@@ -87,7 +87,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-airplane"></i></div>
               <h4 class="title"><a class="stretched-link">Rápido</a></h4>
-              <p>El spoofer está programado de tal forma que no haya que hacer casi pasos para usarlo.</p>
+              <p>El Virtualizer está programado de tal forma que no haya que hacer casi pasos para usarlo.</p>
             </div>
           </div>
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="200">
@@ -101,14 +101,14 @@
             <div class="icon-box">
               <div class="icon"><i class="bi bi-list"></i></div>
               <h4 class="title"><a class="stretched-link">Compatibilidad</a></h4>
-              <p>El spoofer funciona en casi todas las motherboards.</p>
+              <p>El Virtualizer funciona en casi todas las motherboards.</p>
             </div>
           </div>
           <div class="col-xl-3 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-box"></i></div>
               <h4 class="title"><a class="stretched-link">Opciones</a></h4>
-              <p>El spoofer incluye un cleaner y un serial checker.</p>
+              <p>El Virtualizer incluye un cleaner y un serial checker.</p>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
         <div class="row g-4 py-lg-5" data-aos="zoom-out" data-aos-delay="100">
           <div class="col-lg-4">
             <div class="pricing-item">
-              <h3>Wenta Spoofer</h3>
+              <h3>Wenta Virtualizer</h3>
               <div class="icon">
                 <i class="bi bi-box"></i>
               </div>
@@ -138,7 +138,7 @@
 
           <div class="col-lg-4">
             <div class="pricing-item featured">
-              <h3>Wenta Spoofer</h3>
+              <h3>Wenta Virtualizer</h3>
               <div class="icon">
                 <i class="bi bi-airplane"></i>
               </div>
@@ -151,7 +151,7 @@
 
           <div class="col-lg-4">
             <div class="pricing-item">
-              <h3>Wenta Spoofer</h3>
+              <h3>Wenta Virtualizer</h3>
               <div class="icon">
                 <i class="bi bi-send"></i>
               </div>
