Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
         <div class="section-header">
           <h2>Precios</h2>
         </div>
+         <div class="row g-4 py-lg-5" data-aos="zoom-out" data-aos-delay="100">
+          <div class="col-lg-4">
+            <div class="pricing-item">
+              <h3>Wenta Virtualizer</h3>
+              <div class="icon">
+                <i class="bi bi-box"></i>
+              </div>
+              <h4><sup>$</sup>1.99<span> / day</span></h4>
+              <div class="text-center">
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=2.43&currency_code=USD&item_name=Producto+Digital+DIARIO&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
+              </div>
+            </div>
+          </div>
         <div class="row g-4 py-lg-5" data-aos="zoom-out" data-aos-delay="100">
           <div class="col-lg-4">
             <div class="pricing-item">
@@ -129,9 +142,9 @@
               <div class="icon">
                 <i class="bi bi-box"></i>
               </div>
-              <h4><sup>$</sup>4.99<span> / week</span></h4>
+              <h4><sup>$</sup>7.99<span> / week</span></h4>
               <div class="text-center">
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=5.59&currency_code=USD&item_name=Producto+Digital+SEMANAL&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=8.76&currency_code=USD&item_name=Producto+Digital+SEMANAL&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
               </div>
             </div>
           </div>
@@ -142,9 +155,9 @@
               <div class="icon">
                 <i class="bi bi-airplane"></i>
               </div>
-              <h4><sup>$</sup>9.99<span> / month</span></h4>
+              <h4><sup>$</sup>19.99<span> / month</span></h4>
               <div class="text-center">
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=10.88&currency_code=USD&item_name=Producto+Digital+MENSUAL&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=21.35&currency_code=USD&item_name=Producto+Digital+MENSUAL&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
               </div>
             </div>
           </div>
@@ -155,9 +168,9 @@
               <div class="icon">
                 <i class="bi bi-send"></i>
               </div>
-              <h4><sup>$</sup>30<span> / lifetime</span></h4>
+              <h4><sup>$</sup>45<span> / lifetime</span></h4>
               <div class="text-center">
-                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=32.03&currency_code=USD&item_name=Producto+Digital&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
+                <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_xclick&business=sebachef2002@hotmail.com&amount=47.89&currency_code=USD&item_name=Producto+Digital&return=https://bauti0.github.io/thankyou.html" class="buy-btn">Comprar ahora</a>
               </div>
             </div>
           </div>
